src/tests/test-src/errors/E50-unary-types.syntran
// E50: unary-types
// A unary operator is not defined for the given operand type

let a = true;
let r = -a;
